--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window x:Name="Calculator" x:Class="WpfApp2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,17 @@
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
        
-        Title="MainWindow" Height="380" Width="280" OpacityMask="#FF9B4141" ResizeMode="NoResize">
-    <Grid OpacityMask="#CCA43D" Background="#FF302D2D" Visibility="Visible" Margin="0,1,0,-6">
+        Title="Calculator" Height="384" Width="280" OpacityMask="#FF9B4141" ResizeMode="NoResize" Icon="/purepng.com-calculator-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596017qe0p7.png" >
+    <Window.Foreground>
+        <ImageBrush/>
+    </Window.Foreground>
+    <Window.Style>
+        <Style/>
+    </Window.Style>
+    <Grid OpacityMask="#CCA43D" Visibility="Visible" Margin="0,0,0,3" Opacity="0.965" >
+        <Grid.Background>
+            <ImageBrush ImageSource="/crop.jpg" Stretch="UniformToFill"/>
+        </Grid.Background>
         <Grid.Effect>
             <DropShadowEffect/>
         </Grid.Effect>
@@ -17,8 +26,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="_9" Content="9" HorizontalAlignment="Left" Height="31" Margin="20,173,0,0" VerticalAlignment="Top" Width="49" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="_8" Content="8" HorizontalAlignment="Left" Height="31" Margin="84,173,0,0" VerticalAlignment="Top" Width="50" RenderTransformOrigin="0.5,0.5" FontSize="16" FontWeight="Bold" Click="button_click">
+        <Button x:Name="_9" Content="9" HorizontalAlignment="Left" Height="31" Margin="20,165,0,0" VerticalAlignment="Top" Width="49" FontSize="16" FontWeight="Bold" Click="button_click" Background="#FFF5EDED"/>
+        <Button x:Name="_8" Content="8" HorizontalAlignment="Left" Height="31" Margin="84,165,0,0" VerticalAlignment="Top" Width="50" RenderTransformOrigin="0.5,0.5" FontSize="16" FontWeight="Bold" Click="button_click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -28,26 +37,29 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="_7" Content="7" HorizontalAlignment="Left" Height="31" Margin="145,173,0,0" VerticalAlignment="Top" Width="49" Click="button_click" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="_6" Content="6" HorizontalAlignment="Left" Margin="146,218,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="_5" Content="5" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" Height="31" FontSize="16" FontWeight="Bold" Click="button_click" Margin="84,218,0,0"/>
-        <Button x:Name="_4" Content="4" HorizontalAlignment="Left" Margin="20,218,0,0" VerticalAlignment="Top" Width="49" IsCancel="True" FontSize="16" FontWeight="Bold" Height="31" Click="button_click"/>
-        <Button x:Name="_2" Content="2" HorizontalAlignment="Left" Margin="84,263,0,0" VerticalAlignment="Top" Width="50" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="_1" Content="1" HorizontalAlignment="Left" Margin="21,264,0,0" VerticalAlignment="Top" Click="button_click" Width="49" Height="31" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="_3" Content="3" HorizontalAlignment="Left" Margin="147,263,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="_0" Content="0" HorizontalAlignment="Left" Margin="86,316,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="__dot" Content="." HorizontalAlignment="Left" Margin="150,316,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="modulos" Content="%" HorizontalAlignment="Left" Height="31" Margin="22,316,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.304,1.001" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="multiply" Content="*" HorizontalAlignment="Left" Margin="212,173,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="divide" Content="/" HorizontalAlignment="Left" Margin="213,218,0,0" VerticalAlignment="Top" Click="button_click" Width="40" Height="31" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="sum" Content="+" HorizontalAlignment="Left" Margin="214,316,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="minus" Content="-" HorizontalAlignment="Left" Margin="214,263,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
-        <Button x:Name="list" Content="List" HorizontalAlignment="Left" Margin="80,140,0,0" VerticalAlignment="Top" Width="49" Height="20" FontWeight="Normal" Click="list_Click"/>
-        <Button x:Name="clear" Content="C" HorizontalAlignment="Left" Margin="145,140,0,0" VerticalAlignment="Top" Width="49" Height="20" IsDefault="True" FontWeight="Bold" Click="clear_Click"/>
-        <Button x:Name="exit" Content="Exit" HorizontalAlignment="Left" Margin="22,140,0,0" VerticalAlignment="Top" Width="48" Height="20" FontWeight="Normal" Click="button_click"/>
-        <Button x:Name="equal" Content="=" HorizontalAlignment="Left" Margin="212,140,0,0" VerticalAlignment="Top" Width="40" Height="20" Click="equal_click" FontWeight="Bold" FontStyle="Normal"/>
-        <Label x:Name="calc" Content="&#x9;&#x9;String Calculator&#x9;" HorizontalAlignment="Center" Height="26" VerticalAlignment="Bottom" Width="300" FontWeight="Bold" BorderBrush="#FF0C0B0B" Background="White" Opacity="0.8" Margin="0,0,0,340"/>
-        <TextBox x:Name="text_box" TextWrapping="Wrap" TextChanged="TextBox_TextChanged" Margin="24,55,27,244"/>
+        <Button x:Name="_7" Content="7" HorizontalAlignment="Left" Height="31" Margin="145,165,0,0" VerticalAlignment="Top" Width="49" Click="button_click" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="_6" Content="6" HorizontalAlignment="Left" Margin="146,210,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="_5" Content="5" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" Height="31" FontSize="16" FontWeight="Bold" Click="button_click" Margin="84,210,0,0"/>
+        <Button x:Name="_4" Content="4" HorizontalAlignment="Left" Margin="20,210,0,0" VerticalAlignment="Top" Width="49" IsCancel="True" FontSize="16" FontWeight="Bold" Height="31" Click="button_click"/>
+        <Button x:Name="_2" Content="2" HorizontalAlignment="Left" Margin="84,255,0,0" VerticalAlignment="Top" Width="50" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="_1" Content="1" HorizontalAlignment="Left" Margin="21,256,0,0" VerticalAlignment="Top" Click="button_click" Width="49" Height="31" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="_3" Content="3" HorizontalAlignment="Left" Margin="147,255,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="_0" Content="0" HorizontalAlignment="Left" Margin="86,301,0,0" VerticalAlignment="Top" Width="48" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="__dot" Content="." HorizontalAlignment="Left" Margin="148,302,0,0" VerticalAlignment="Top" Width="49" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="modulos" Content="%" HorizontalAlignment="Left" Height="31" Margin="22,301,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.304,1.001" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="multiply" Content="*" HorizontalAlignment="Left" Margin="212,165,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="divide" Content="/" HorizontalAlignment="Left" Margin="213,210,0,0" VerticalAlignment="Top" Click="button_click" Width="40" Height="31" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="sum" Content="+" HorizontalAlignment="Left" Margin="215,301,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="minus" Content="-" HorizontalAlignment="Left" Margin="214,255,0,0" VerticalAlignment="Top" Width="40" Height="31" FontSize="16" FontWeight="Bold" Click="button_click"/>
+        <Button x:Name="list" Content="List" HorizontalAlignment="Left" Margin="85,125,0,0" VerticalAlignment="Top" Width="49" Height="20" FontWeight="Normal" Click="list_Click"/>
+        <Button x:Name="clear" Content="C" HorizontalAlignment="Left" Margin="145,124,0,0" VerticalAlignment="Top" Width="49" Height="20" IsDefault="True" FontWeight="Bold" Click="clear_Click"/>
+        <Button x:Name="Undo" Content="" HorizontalAlignment="Left" Margin="22,125,0,0" VerticalAlignment="Top" Width="48" Height="20" FontWeight="Normal" Click="undo_button" BorderBrush="#FFFFF9F9">
+            <Button.Background>
+                <ImageBrush Stretch="Uniform" ImageSource="/undo-redo-icon-0.jpg"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="equal" Content="=" HorizontalAlignment="Left" Margin="212,124,0,0" VerticalAlignment="Top" Width="40" Height="20" Click="equal_click" FontWeight="Bold" FontStyle="Normal"/>
+        <TextBox x:Name="text_box" TextWrapping="NoWrap" TextChanged="TextBox_TextChanged" Margin="20,26,18,264" AcceptsReturn="True" Panel.ZIndex="100" AutomationProperties.IsRequiredForForm="True"/>
 
     </Grid>
 </Window>
